# FineTuneMe

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  run.py  start_app.bat
scripts/: check_pre_install.py  install.bat  install_gpu.bat  verify_high_yield.py
src/finetuneme/: __init__.py  __main__.py  main.py
src/finetuneme/core/: config.py  database.py  dependencies.py  init_db.py  security.py
src/finetuneme/models/: __init__.py  project.py  user.py
src/finetuneme/schemas/: __init__.py  project.py  user.py
src/finetuneme/services/: formatter.py  generation.py  generation_backup.py  hardware.py  ingestion.py  loaders.py  providers.py  storage.py
ui/: package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: FileUpload.tsx  ProjectStatus.tsx  SettingsModal.tsx
ui/lib/: api.ts  storage.ts
ui/types/: next-auth.d.ts
