[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finetuneme"
version = "2.0.0"
description = "Local tool for generating synthetic datasets from PDFs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "FineTuneMe Contributors"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.25",
    "pymupdf>=1.23.21",
    "requests>=2.31.0",
    "openai>=1.12.0",
    # Universal Ingestion
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # Multi-Provider AI
    "groq>=0.4.0",
    "anthropic>=0.18.0",
    "json_repair>=0.30.0",
    "python-pptx>=0.6.23",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
finetuneme = "src.finetuneme.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
